# IconChanging

./: App.cpp  App.h  CMakeLists.txt  Main.qml  main.cpp  qml.qrc
